; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/access/gist/extr_gistproc.c_gist_bbox_distance.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/access/gist/extr_gistproc.c_gist_bbox_distance.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32 }

@GeoStrategyNumberOffset = common dso_local global i32 0, align 4
@ERROR = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [33 x i8] c"unrecognized strategy number: %d\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (double (%struct.TYPE_3__*, i32, i32)* @gist_bbox_distance to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal double @gist_bbox_distance(%struct.TYPE_3__* %0, i32 %1, i32 %2) #0 {
  %4 = alloca %struct.TYPE_3__*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca double, align 8
  %8 = alloca i32, align 4
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %9 = load i32, i32* %6, align 4
  %10 = load i32, i32* @GeoStrategyNumberOffset, align 4
  %11 = sdiv i32 %9, %10
  store i32 %11, i32* %8, align 4
  %12 = load i32, i32* %8, align 4
  switch i32 %12, label %21 [
    i32 128, label %13
  ]

13:                                               ; preds = %3
  %14 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %15 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %14, i32 0, i32 0
  %16 = load i32, i32* %15, align 4
  %17 = call i32 @DatumGetBoxP(i32 %16)
  %18 = load i32, i32* %5, align 4
  %19 = call i32 @DatumGetPointP(i32 %18)
  %20 = call double @computeDistance(i32 0, i32 %17, i32 %19)
  store double %20, double* %7, align 8
  br label %25

21:                                               ; preds = %3
  %22 = load i32, i32* @ERROR, align 4
  %23 = load i32, i32* %6, align 4
  %24 = call i32 @elog(i32 %22, i8* getelementptr inbounds ([33 x i8], [33 x i8]* @.str, i64 0, i64 0), i32 %23)
  store double 0.000000e+00, double* %7, align 8
  br label %25

25:                                               ; preds = %21, %13
  %26 = load double, double* %7, align 8
  ret double %26
}

declare dso_local double @computeDistance(i32, i32, i32) #1

declare dso_local i32 @DatumGetBoxP(i32) #1

declare dso_local i32 @DatumGetPointP(i32) #1

declare dso_local i32 @elog(i32, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
